Page overflow fix

--- a/src/screens/Screen.module.css
+++ b/src/screens/Screen.module.css
@@ -11,7 +11,6 @@
 .body {
   display: flex;
   height: calc(100vh - 72px);
-  overflow: hidden;
 }
 
 .body .side {
